Fix align copyright to center And prettired file

--- a/app/scss/blocks/footer.scss
+++ b/app/scss/blocks/footer.scss
@@ -15,6 +15,8 @@
   }
 
   &__copyright {
+    display: flex;
+    align-items: center;
     padding-right: 0.8rem;
     margin-right: 1rem;
     font-size: 0.94rem;
@@ -35,7 +37,7 @@
 
   &__nav {
     display: flex;
-  align-items: center;
+    align-items: center;
     &-link {
       margin-left: 1.5rem;
       color: $gray;
@@ -52,11 +54,11 @@
       &--btn {
         border: 1px solid $gray-light;
         border-radius: 20px;
-        padding: 0.5rem 1.7rem ;
+        padding: 0.5rem 1.7rem;
         line-height: 1.1;
         &:hover {
-          background-color: #AAA9AA;
-          border-color: #AAA9AA;
+          background-color: #aaa9aa;
+          border-color: #aaa9aa;
           color: $black;
         }
       }
